--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   width: 100%;
   height: 100%;
-  background-color: #81cbad;
+  box-sizing: border-box;
+  background-color: #0c5250;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,19 +18,80 @@ code {
 }
 
 .main {
+  position: relative;
+  background-color: #0c5250;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  width: 90%;
+  padding: 5%;
+  height: auto;
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 10px;
+}
+.main div {
+  background: #81cbad;
+  border-radius: 3%;
+  width: 90%;
+  padding: 5%;
+}
+.number-div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  grid-column: 1/7;
+}
+.number-div div {
+  padding: 0;
+  grid-column: 1/-1;
+}
+.number-div h2 {
+  height: auto;
+  margin: 0;
 }
 .chart-div {
-  grid-column: 1/10;
+  width: 100%;
+
+  grid-column: 1/7;
 }
-h1 {
-  font-size: 1.6rem;
+
+.chart-div h1 {
+  font-size: 1.4em;
+  margin-top: 0;
+}
+.barchart-div {
+  grid-column: 1/-1;
+}
+.topDonators-div {
+  grid-column: 7/-1;
+  grid-row: 1/3;
+}
+canvas {
+  width: 94%;
+}
+
+ol {
+  margin: 0;
+}
+ol h1 {
+  font-size: 1.4em;
+  margin-top: 0;
+  width: 80%;
+}
+li {
+  width: 80%;
+  background-color: white;
+  margin: 0;
+  margin-bottom: 30px;
+}
+li h1 {
+  display: inline;
+  margin-left: 30px;
+
+  font-size: 1em;
 }
 h2 {
   font-size: 1.3rem;
-  margin: 0;
-  margin-bottom: 10px;
+
+  margin-bottom: 15%;
 }
 span {
   color: white;
@@ -37,5 +99,7 @@ span {
 div {
   color: #0c5250;
   font-size: 1.5rem;
-  grid-column: 1/8;
+}
+.newUsers {
+  grid-column: 4/-1;
 }
